; ModuleID = '/home/carl/AnghaBench/redis/src/modules/extr_testmodule.c_TestStringAppendAM.c'
source_filename = "/home/carl/AnghaBench/redis/src/modules/extr_testmodule.c_TestStringAppendAM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"bar\00", align 1
@REDISMODULE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TestStringAppendAM(i32* %0, i32** %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32**, i32*** %5, align 8
  %9 = ptrtoint i32** %8 to i32
  %10 = call i32 @REDISMODULE_NOT_USED(i32 %9)
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @REDISMODULE_NOT_USED(i32 %11)
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @RedisModule_AutoMemory(i32* %13)
  %15 = load i32*, i32** %4, align 8
  %16 = call i32* @RedisModule_CreateString(i32* %15, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 3)
  store i32* %16, i32** %7, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @RedisModule_RetainString(i32* %17, i32* %18)
  %20 = load i32*, i32** %4, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = call i32 @RedisModule_StringAppendBuffer(i32* %20, i32* %21, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 3)
  %23 = load i32*, i32** %4, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = call i32 @RedisModule_ReplyWithString(i32* %23, i32* %24)
  %26 = load i32*, i32** %4, align 8
  %27 = load i32*, i32** %7, align 8
  %28 = call i32 @RedisModule_FreeString(i32* %26, i32* %27)
  %29 = load i32, i32* @REDISMODULE_OK, align 4
  ret i32 %29
}

declare dso_local i32 @REDISMODULE_NOT_USED(i32) #1

declare dso_local i32 @RedisModule_AutoMemory(i32*) #1

declare dso_local i32* @RedisModule_CreateString(i32*, i8*, i32) #1

declare dso_local i32 @RedisModule_RetainString(i32*, i32*) #1

declare dso_local i32 @RedisModule_StringAppendBuffer(i32*, i32*, i8*, i32) #1

declare dso_local i32 @RedisModule_ReplyWithString(i32*, i32*) #1

declare dso_local i32 @RedisModule_FreeString(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
